--- a/appmitra/src/main/res/layout/item_service.xml
+++ b/appmitra/src/main/res/layout/item_service.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@color/md_grey_500"
+        android:backgroundTint="@color/primaryColor"
         android:clickable="true"
         android:focusable="true"
         app:cardCornerRadius="100dp"
