--- a/app/src/main/res/layout/item_wash_type.xml
+++ b/app/src/main/res/layout/item_wash_type.xml
@@ -20,7 +20,7 @@
         <ImageView
             android:id="@+id/img_wash_type"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginHorizontal="32dp"
             android:layout_marginTop="16dp"
