--- a/appmitra/src/main/res/layout/activity_main.xml
+++ b/appmitra/src/main/res/layout/activity_main.xml
@@ -15,6 +15,24 @@
         android:orientation="vertical"
         android:paddingTop="20dp">
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_logout"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="20dp"
+            android:drawableEnd="@drawable/ic_logout"
+            android:text="Logout"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="normal"
+            app:cornerRadius="15dp"
+            app:elevation="4dp"
+            app:iconTint="@null"
+            app:strokeColor="@color/white" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
