--- a/appmitra/src/main/res/layout/activity_service.xml
+++ b/appmitra/src/main/res/layout/activity_service.xml
@@ -76,4 +76,22 @@
 
     </ScrollView>
 
+    <LinearLayout
+        android:id="@+id/spin_kit"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_title">
+
+        <com.github.ybq.android.spinkit.SpinKitView
+            style="@style/SpinKitView.Large.ThreeBounce"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:SpinKit_Color="@color/md_blue_500" />
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
