--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -9,11 +9,11 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:scaleType="fitXY"
         android:src="@drawable/bg_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
     <FrameLayout
@@ -21,9 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@drawable/bg_header"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/tv_notifications_header"
@@ -42,133 +42,135 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         app:cardCornerRadius="12dp"
-        app:strokeWidth="4dp"
-        app:strokeColor="#3F86A9"
         app:layout_constraintBottom_toTopOf="@id/btn_kembali"
-        app:layout_constraintTop_toBottomOf="@id/fl_header"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fl_header"
+        app:strokeColor="#3F86A9"
+        app:strokeWidth="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:paddingHorizontal="16dp"
-            android:paddingVertical="32dp"
-            android:orientation="vertical">
+            android:paddingVertical="32dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_customer_service"
                 android:layout_gravity="center"
+                android:src="@drawable/ic_customer_service"
                 tools:ignore="ContentDescription" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/support_caption"
-                android:textSize="20sp"
                 android:gravity="center"
-                android:textColor="#3D84A8"/>
+                android:text="@string/support_caption"
+                android:textColor="#3D84A8"
+                android:textSize="20sp" />
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cv_mail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
-                app:strokeWidth="1dp"
-                app:strokeColor="#3F86A9">
+                app:strokeColor="#3F86A9"
+                app:strokeWidth="1dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="8dp"
                     android:orientation="horizontal"
+                    android:padding="8dp"
                     tools:ignore="UseCompoundDrawables">
 
                     <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:src="@drawable/ic_email"
-                        android:contentDescription="@string/support_email"/>
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:contentDescription="@string/support_email"
+                        android:src="@drawable/ic_email" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="8dp"
                         android:text="@string/support_email"
-                        android:layout_marginStart="8dp"
-                        android:textSize="18sp"
                         android:textColor="#3D84A8"
-                        android:layout_gravity="center"/>
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cv_whatssapp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
-                app:strokeWidth="1dp"
-                app:strokeColor="#3F86A9">
+                app:strokeColor="#3F86A9"
+                app:strokeWidth="1dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="8dp"
                     android:orientation="horizontal"
+                    android:padding="8dp"
                     tools:ignore="UseCompoundDrawables">
 
                     <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:src="@drawable/ic_phone"
-                        android:contentDescription="@string/support_number"/>
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:contentDescription="@string/support_number"
+                        android:src="@drawable/ic_phone" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="8dp"
                         android:text="@string/support_number"
-                        android:layout_marginStart="8dp"
-                        android:textSize="18sp"
                         android:textColor="#3D84A8"
-                        android:layout_gravity="center"/>
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cv_instagram"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
-                app:strokeWidth="1dp"
-                app:strokeColor="#3F86A9">
+                app:strokeColor="#3F86A9"
+                app:strokeWidth="1dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="8dp"
                     android:orientation="horizontal"
+                    android:padding="8dp"
                     tools:ignore="UseCompoundDrawables">
 
                     <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:src="@drawable/ic_instagram"
-                        android:contentDescription="@string/support_instagram" />
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:contentDescription="@string/support_instagram"
+                        android:src="@drawable/ic_instagram" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/support_instagram"
+                        android:layout_gravity="center"
                         android:layout_marginStart="8dp"
-                        android:textSize="18sp"
+                        android:text="@string/support_instagram"
                         android:textColor="#3D84A8"
-                        android:layout_gravity="center"/>
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
@@ -186,11 +188,11 @@
         android:layout_marginBottom="24dp"
         android:hint="@string/back"
         android:textColorHint="#D92424"
+        app:backgroundTint="@color/white"
+        app:cornerRadius="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:backgroundTint="@color/white"
         app:strokeColor="#D92424"
-        app:strokeWidth="2dp"
-        app:cornerRadius="100dp"/>
+        app:strokeWidth="2dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
